# learnbotics

src/gazebo_light_sensor_plugin/: CMakeLists.txt  package.xml
src/gazebo_light_sensor_plugin/include/gazebo_light_sensor_plugin/: light_sensor_plugin.h
src/gazebo_light_sensor_plugin/src/: light_sensor_plugin.cpp
src/gazebo_tutorials/: package.xml
src/gazebo_tutorials/src/: simple_world_plugin.cpp
src/learnbotic/learnbotic_description/launch/: learnbotic.rviz  learnbotic_rviz.launch
src/learnbotic/learnbotic_description/urdf/: camera.xacro  model.urdf  vlp16.xacro
src/learnbotic/learnbotic_gazebo/launch/: gazebo.launch
src/learnbotic/lidar_tutorial/worlds/: velodyne.world  velodyne_2.world
src/plugins_tutorial/: CMakeLists.txt  package.xml
src/plugins_tutorial/src/: CMakeLists.txt  hello.world  hello_world.cc
src/tc_gazebo_custom_plugins/: CMakeLists.txt
src/tc_gazebo_custom_plugins/launch/: main.launch  main_modelpush.launch
src/tc_gazebo_custom_plugins/src/: model_push.cc
src/tc_gazebo_custom_plugins/worlds/: simple_world.world
